# AI_novel

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  config.yaml  config_sora_test.yaml  docker-compose.yml  main.py  mcp_server.py  novel_video.spec  pyproject.toml  requirements.txt  setup.sh  start.bat  start.sh  test_e2e.py  test_web_ui.py  web.py
.claude/skills/: novel-create.md  novel-export.md  novel-review.md  novel-status.md  novel-write.md
.github/workflows/: build.yml  release.yml
docs/: edit_examples.md  mcp_edit_guide.md  novel-quality-architecture.md  novel-quality-pipeline-v1.2.md  video-prompt-research.md  videogen-research.md
docs/adr/: 0001-versioned-settings.md
frontend/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers.tsx
frontend/docs/: api-mapping.md
frontend/e2e/: create.spec.ts  fixtures.ts  home.spec.ts  navigation.spec.ts  novel-detail.spec.ts  novel-list.spec.ts  ppt-create.spec.ts  ppt-detail.spec.ts  ppt-list.spec.ts  projects.spec.ts  prompts.spec.ts  settings.spec.ts  tasks.spec.ts  video-create.spec.ts  video-detail.spec.ts  video-list.spec.ts
frontend/lib/: api-client.ts  app-store.ts  hooks.ts  mock-data.ts  types.ts  utils.ts
input/: abstract_novel.txt  fish_city_douyin.txt  micro_01_mirror.txt  micro_02_elevator.txt  micro_03_photo.txt  micro_04_cat.txt  micro_05_delivery.txt  micro_06_grandpa.txt  sora_test.txt  test_novel.txt
presets/styles/: anime.yaml  chinese_ink.yaml  cyberpunk.yaml  realistic.yaml  watercolor.yaml
research/: AI_PPT_Generation_Research_Report_2026.md
scripts/: _rewrite_novel_12e1c974_accept_vol2.py  _rewrite_novel_12e1c974_stage1_vol2.py  _rewrite_novel_12e1c974_stage2_rollback.py  _rewrite_novel_12e1c974_stage2b_fixup.py  _rewrite_novel_12e1c974_stage3_regen.py  audit_chapters.py  detect_repetition.py  gen_scifi_novel.py  generate_full_novel.py  migrate_novel_v1_to_v2.py  migrate_novel_v2_to_v3.py  qimao_publish.py  quality_ab_debias.py  quality_ab_phase3_vs_phase4.py  quality_regression.py  verify_novel_fixes.py
specs/architecture/: README.md  canonical-state.md  layer-contract.md  orchestration.md
specs/architecture-rework-2026/: AUDIT.md  DESIGN.md  MODULE_USAGE.md  PHASE4.md  PHASE5.md  README.md
specs/langgraph-multi-agent/: architecture.md  design.md  requirements.md  tasks.md
specs/narrative-control/: design.md  requirements.md  tasks.md
specs/novel-knowledge-graph/: design.md
specs/novel-narrative-arc-v2/: design.md  requirements.md  tasks.md
specs/novel-smart-editor/: README.md  design.md  requirements.md  tasks.md
specs/novel-writing/: design.md  requirements.md  tasks.md
specs/ppt-generation/: design.md  requirements.md  tasks.md  v2-design.md  v2-requirements.md  v2-tasks.md
specs/ppt-html-first/: design.md  requirements.md  tasks.md
specs/react-prompt-registry/: design.md  requirements.md  tasks.md
specs/refinement-workbench/: design.md  requirements.md  tasks.md
src/: agent_pipeline.py  checkpoint.py  config_manager.py  director_pipeline.py  logger.py  pipeline.py
src/agents/: graph.py  (+9 more)
tests/: conftest.py  test_agents.py  test_api.py  test_api_conversations.py  test_api_narrative.py  test_api_prompts.py  test_cost_tracker.py  test_integration_real.py  test_llm_tts_defensive.py  test_mcp_novel_edit.py  test_mcp_server.py  test_media_defensive.py  test_phase2.py  test_pipeline_defensive.py  test_scriptplan.py  test_task_queue.py  test_taskqueue_defensive.py  test_video_gen_tool.py  test_web_dropdown_position.py  test_web_e2e.py
(+440 files in other folders)
